Rename LLM inference engine project to jinfer.